fixed my scrollbar to be smaller.

--- a/src/blackbox/globals.scss
+++ b/src/blackbox/globals.scss
@@ -62,15 +62,15 @@ button {
 
 @media (width > 768px) {
 	*::-webkit-scrollbar {
-		width: 1rem;
+		width: 0.8rem;
 	}
 	*::-webkit-scrollbar-track {
 		background-color: transparent;
 	}
 	*::-webkit-scrollbar-thumb {
-		border: 4px solid transparent;
+		border: 2px solid transparent;
 		background-clip: content-box;
 		background-color: var(--primaryColor);
-		border-radius: 2rem;
+		border-radius: 4rem;
 	}
 }
